--- a/Exam Management/WebContent/assignment_result.html
+++ b/Exam Management/WebContent/assignment_result.html
@@ -1,4 +1,3 @@
-<%@ page language="java" contentType="text/html; charset=ISO-8859-1" pageEncoding="ISO-8859-1"%>
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
@@ -17,10 +16,10 @@
     <div class="sidebar">
     <header>Menu</header>
   <ul>
-   <li><a href="mainUI.jsp"><i class="fas fa-stream"></i>Exam result</a></li>
-    <li><a href="assignment_result.jsp"><i class="fas fa-stream"></i>Assignment result</a></li>
-    <li><a href="exam.jsp"><i class="fas fa-stream"></i>Exam</a></li>
-    <li><a href="assignment.jsp"><i class="fas fa-stream"></i>Assignment</a></li>
+   <li><a href="mainUI.html"><i class="fas fa-stream"></i>Exam result</a></li>
+    <li><a href="assignment_result.html"><i class="fas fa-stream"></i>Assignment result</a></li>
+    <li><a href="exam.html"><i class="fas fa-stream"></i>Exam</a></li>
+    <li><a href="assignment.html"><i class="fas fa-stream"></i>Assignment</a></li>
     <li><a href="#"><i class="fas fa-stream"></i>Contact</a></li>
     <li><a href="#"><i class="fas fa-sliders-h"></i>Logout</a></li>
 
@@ -28,7 +27,7 @@
 </div>
     <section>
         <div class="name">
-            <h3><a href="#">Tharindu Dilshan Samarakoon</a></h3>
+            <h3><a href="#">TharinduDilshanSamarakoon</a></h3>
         </div>
         <div class="function">
           <h1>ASSIGNMENT RESULTS</h1>
@@ -41,9 +40,8 @@
     Title: <input type="text" name="ertitle"><br>
     Grade: <input type="" name="ergrade"></br>
     Upload: <input type="file" name="upload" accept="application/pdf,application/vnd.ms-excel" /></br>
-     <button type="submit" class="btn btn-danger" name="edit" style=" margin-top: 40px;
-    padding-left: -30px; padding-right: -30px;" >Edit</button>
-    <button type="submit" class="btn btn-primary" name="submit" style="margin-top: -40px; margin-bottom: 25px; margin-left: 150px;" >Submit</button>
+     <a href="AssignmentResultViewServlet">view</a>
+    <button type="submit" class="btn btn-primary" name="submit" style="margin-top: 10px; margin-bottom: 25px; margin-left: 127px;" >Submit</button>
     </form>
   </div>
 </div>
@@ -52,12 +50,11 @@
     <div class="form">
     <form action="#">
     Index No: <input type="text" name="ertitle"><br>
-    Grade: <input type="" name="ergrade"></br>
-    Subject: <input type="" name="ergrade"></br>
-    Result: <input type="" name="ergrade"></br>
-    <button type="submit" class="btn btn-danger" name="edit" style=" margin-top: 40px;
-    padding-left: -30px; padding-right: -30px;" >Edit</button>
-    <button type="submit" class="btn btn-primary" name="submit" style="margin-top: -40px; margin-bottom: 25px; margin-left: 150px;" >Submit</button>
+    Grade: <input type="" name="ergrade"><br>
+    Subject: <input type="text" name="ergrade"><br>
+    Result: <input type="" name="ergrade"><br>
+    <a href="AssignmentResultViewServlet">view</a>
+    <button type="submit" class="btn btn-primary" name="submit" style="margin-top: 10px; margin-bottom: 25px; margin-left: 127px;" >Submit</button>
     </form>
   </div>
 </div>
